--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
 
     <section class="card" aria-labelledby="rolls">
-      <h2 id="rolls" style="font-size:16px;margin:0 0 8px 0">定型ダイス</h2>
+      <h2 id="rolls" style="font-size:16px;margin:0 0 8px 0">ダイス</h2>
       <div class="row controls">
         <!-- 2d6 and 2d6+3..+8 -->
         <div class="flexcol" style="gap:8px;">
@@ -66,7 +66,7 @@
 
         <!-- カスタム式（例: 2d6+4） -->
         <div class="flexcol" style="min-width:260px;">
-          <div class="small">カスタム式（例: 2d6+4）</div>
+          <div class="small">カスタム式</div>
           <div class="row">
             <input id="exprInput" placeholder="例: 2d6+4 or 1d20-1" style="flex:1">
             <button id="rollExpr" class="big">振る</button>
