--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="row controls">
         <!-- 2d6 and 2d6+3..+8 -->
         <div class="flexcol" style="gap:8px;">
-          <div class="small">2d6 系</div>
+          <div class="small"></div>
           <div id="presetButtons" class="row"></div>
         </div>
 
